--- a/스프링시큐리티.md
+++ b/스프링시큐리티.md
@@ -31,7 +31,7 @@ This generated password is for development use only. Your security configuration
 
 ### 스프링 스큐리티(알렉스 아저씨) 인증 방식은 세션과 쿠키 방식임
 
-==================================================================================
+================================================================================================ㄴ
 
 스텝 2
 
@@ -45,7 +45,7 @@ This generated password is for development use only. Your security configuration
       web.ignoring().antMatchers("/css/**", "/js/**", "/img/**", "/lib/**");
    }
    
-=====================================================================================================
+================================================================================================
 
 스텝 3
 
@@ -62,6 +62,8 @@ This generated password is for development use only. Your security configuration
 
 스텝 4
 
+## 권환 설정
+
 home.jsp를 제대로 만들고, 아래와 같이 설정하여 / 로 접속후 home.jsp가 나오는 것을 확인한다.
 
    @Override
@@ -77,3 +79,19 @@ home.jsp를 제대로 만들고, 아래와 같이 설정하여 / 로 접속후 h
    }
    
 ================================================================================================
+
+스텝 5.
+
+## 기본 로그인 폼을 사용 하기 위한 설정
+
+   protected void configure(HttpSecurity http) throws Exception {
+      // 우선 CSRF설정을 해제한다.
+      // 초기 개발시만 해주는게 좋다.
+      http.csrf().disable();
+      
+      http.authorizeRequests()
+      .antMatchers("/user/**").hasAnyRole("USER") 
+      .antMatchers("/admin/**").hasAnyRole("ADMIN")
+      .antMatchers("/**").permitAll();
+      
+      http.formLogin(); //스프링 시큐리티에 있는 기본 로그인 폼을 사용하겠다.
