--- a/스프링_시큐리티/스프링시큐리티.md
+++ b/스프링_시큐리티/스프링시큐리티.md
@@ -101,17 +101,19 @@ home.jsp를 제대로 만들고, 아래와 같이 설정하여 / 로 접속후 h
 스텝 6.
 
 ## DB 작업 및 UserMapper 생성
-
-   protected void configure(HttpSecurity http) throws Exception {
-      // 우선 CSRF설정을 해제한다.
-      // 초기 개발시만 해주는게 좋다.
-      http.csrf().disable();
-      
-      http.authorizeRequests()
-      .antMatchers("/user/**").hasAnyRole("USER") 
-      .antMatchers("/admin/**").hasAnyRole("ADMIN")
-      .antMatchers("/**").permitAll();
-      
-      http.formLogin(); //스프링 시큐리티에 있는 기본 로그인 폼을 사용하겠다.
       
 ================================================================================================
+
+스텝 7.
+
+## 로그인 페이지 커스텀 마이징
+
+      // 로그인 폼 커스텀 마이징
+      http.formLogin()
+      .loginPage("/login")  // loginPage() 는 말그대로 로그인할 페이지 url 이고
+      .usernameParameter("id")
+      .passwordParameter("pw")
+      .defaultSuccessUrl(".")
+  
+================================================================================================
+
