--- a/스프링_시큐리티/스프링시큐리티.md
+++ b/스프링_시큐리티/스프링시큐리티.md
@@ -163,6 +163,41 @@ PasswordEncoder라는 인터페이스의 구현체로 BCryptPasswordEncoder, Arg
 
 ### 이제 DB와 연결하여 시큐리티를 커스텀 마이징 하여 보자.
 
+UserDetails와 User 정보를 주고 받기 위한 Fax = UserDetailsService
+
+package edu.ict.ex.security;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.stereotype.Service;
+
+import edu.ict.ex.mapper.UserMapper;
+import edu.ict.ex.vo.UserVO;
+import lombok.extern.slf4j.Slf4j;
+
+//알렉스 아저씨가 말하는 user 정보를 주고 받기 위한 Fax = UserDetailsService
+@Slf4j
+@Service
+public class CustomUserDetailsService implements UserDetailsService {
+
+	@Autowired
+	private UserMapper userMapper;
+
+	@Override
+	public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+		   log.warn("Load User By UserVO user : " + username);
+		   
+		   UserVO user = userMapper.getUser(username);
+		   
+		   log.warn("queried by UserVO mapper : " + user);
+		   
+		   return user == null ? null : new UserDetailsVO(user);
+	}
+
+}
+
 ================================================================================================
 
 
